feat(auth): migrate JWT secrets to environment variables and refactor authentication strategy

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DATABASE_URL="your-postgres-database-url"
 DIRECT_URL="your-direct-url-for-prisma"
+# Optional: If you want to use a different port for the application, change the PORT value.
 PORT=8000
+
+JWT_ACCESS_SECRET="your-complex-access-secret"
+JWT_REFRESH_SECRET="your-complex-refresh-secret"
